<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/small_house"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/edit_house_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/settings_editHouseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/house_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/settings_btnEditTaskRotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/loginbutton_selector"
            android:drawableStart="@drawable/rotation"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit_task_rotation"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_recycler"
            android:layout_width="407dp"
            android:layout_height="184dp" />

        <CheckBox
            android:id="@+id/settings_chkShowLateTasks"
            android:layout_width="158dp"
            android:layout_height="39dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_late" />

        <CheckBox
            android:id="@+id/settings_chkShowDifficulty"
            android:layout_width="170dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_difficulty" />

        <Button
            android:id="@+id/settings_btnSwitchHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/loginbutton_selector"
            android:drawableStart="@drawable/switch_house"
            android:drawablePadding="8dp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="5dp"
            android:text="@string/switch_house"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/settings_btnDeleteHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/loginbutton_selector"
            android:drawableStart="@drawable/delete"
            android:drawablePadding="8dp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="5dp"
            android:text="@string/delete_house"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/settings_btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:drawableStart="@drawable/logout"
            android:drawablePadding="8dp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="5dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/settings_btnSaveHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:text="@string/save" />

        <Button
            android:id="@+id/settings_btnBackHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:text="@string/back" />

    </LinearLayout>

</ScrollView>