<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signUp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/confirm_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/signUp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/already_user"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_user"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
